[package]
name = "bright"
version = "1.0.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.2"
async-graphql-warp = "7.0.2"
hickory-resolver = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] } 
warp = "0.3.6"
anyhow = "1.0"