[package]
name = "bright"
version = "1.0.0"
edition = "2021"
readme = "README.md"
rust-version = "1.85.0"
homepage = "https://stenstromen.se"
repository = "https://github.com/stenstromen/bright"
description = "DNS, Email and Web standards testing tool"
categories = ["development-tools::testing", "web-programming::http-client", "network-programming"]

[dependencies]
async-graphql = "7.0.16"
hickory-resolver = "0.25.1"
trust-dns-resolver = { version ="0.23.2", features = ["dnssec-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.44.2", features = ["full"] } 
warp = "0.3.7"
anyhow = "1.0.98"

[[bin]]
name = "bright"
path = "src/main.rs"